# ApiVista

./: .demo_driver.mjs  .env.example  .gitignore  .mcp.json  .verify-blog-api.mjs  .verify-vsix.mjs  .vscodeignore  CLAUDE.md  LICENSE  README.md  design-brief-route-linkage-graph.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.test-electron.json  tsconfig.typecheck.json  vitest.config.ts
.claude/hooks/: format-on-edit.mjs
.claude/reports/: 2026-06-15-backend-route-extractor.md  2026-06-19-frontend-call-extractor.md
.kiro/specs/backend-route-extractor/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/frontend-call-extractor/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/route-linkage-engine/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/vscode-extension-ui/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: roadmap.md  tech.md
.serena/: project.yml
docs/: README.md  ai-driven-development.md  architecture.md  development.md  project-overview.md
docs/redmine/: README.md  project-overview.md
src/apivista_backend_analysis/: __init__.py  cli.py  errors.py  ids.py  models.py  module_map.py
src/backend-analysis/: assemble.ts  astUtils.ts  cli.ts  extractFile.ts  ids.ts  index.ts  models.ts  moduleMap.ts  parser.ts  symbolTable.ts  warnings.ts
src/frontend-analysis/: assemble.ts  astUtils.ts  cli.ts  fileMap.ts  ids.ts  index.ts  models.ts  project.ts  sfc.ts  warnings.ts
src/route-linkage/: assemble.ts  cli.ts  graphMerge.ts  ids.ts  index.ts  matcher.ts  models.ts  pathMatch.ts
src/shared/: models.ts
src/vscode-extension/: analysisOrchestrator.ts  errorReport.ts  extension.ts  functionCopier.ts  graphPanel.ts  preflightChecker.ts  reanalysisWatcher.ts  resultCache.ts  sourceJump.ts  webviewHtml.ts  webviewProtocol.ts  workspaceScanner.ts
tests/: test_cli_scaffold.py  test_errors.py  test_extractors_routers.py  test_extractors_routes.py  test_extractors_schemas.py  test_ids.py  test_models.py  test_module_map.py  test_sample_app_fixture.py
(+126 files in other folders)
