[project]
name = "apivista-backend-analysis"
version = "0.1.0"
description = "Static analysis tooling for the FastAPI route/call-graph extractor"
requires-python = ">=3.11"
dependencies = [
    "libcst>=1.4",
    "pydantic>=2.12",
]

[project.scripts]
apivista-backend-analysis = "apivista_backend_analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apivista_backend_analysis"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
